--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@media screen and (max-width: 480px) {
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Hachi+Maru+Pop&family=New+Tegomin&family=Zen+Kurenaido&display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Hachi+Maru+Pop&family=New+Tegomin&family=Zen+Kurenaido&display=swap');
+@media screen and (max-width: 480px) {
 
   * {
     padding: 0;
@@ -9,5 +9,14 @@
 
   body {
     font-family: "DotGothic16", sans-serif;
+  }
+
+  h1 {
+    margin-top: 20px;
+  }
+
+  h2 {
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
 }
