--- a/style.css
+++ b/style.css
@@ -13,10 +13,30 @@
 
   h1 {
     margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
   }
 
   h2 {
-    margin-top: 30px;
     margin-bottom: 20px;
+    margin-left: 10px;
+  }
+
+  select {
+    margin: 10px;
+  }
+
+  input {
+    margin: 5px;
+  }
+
+  button {
+    margin-bottom: 30px;
   }
 }
